# kmer-profile

./: .gitignore  README.md  dash_kmer_profile.py  setup.cfg
src/: __init__.py  _const.py  _dash.py  _main.py  _type.py  dash.py  em_algorithm.py  gibbs_sampling.py  hidden_markov_model.py  io.py  kalman_smoother.py  poisson_mixture_model.py  type.py  visualize.py
src/_core/: __init__.py  _class_rel.py  _class_unrel.py  _context.py  _eval.py  _io.py  _naive.py  _peak.py  _util.py  _wall.py
src/_plot/: __init__.py  _color.py  _context.py  _hist.py  _profile.py
src/_type/: __init__.py  _error.py  _pread.py  _state.py
src/archive/: _class_rel.py  _class_unrel.py  _naive.py
src/archive/_type/: __init__.py  _error.py  _intvl.py  _state.py
src/classifier/: __init__.py  classifiy_reliable.py  classifiy_unreliable.py  context.py  em_algorithm.py  heuristics.py  hidden_markov_model.py  intvl.py  io.py  naive.py  poisson_mixture_model.py
src/io/: __init__.py  _io.py  io.py
src/type/: __init__.py  const.py  error.py  pread.py  type.py
src/visualizer/: __init__.py  context.py  count.py  profile.py  visualize.py
