[metadata]
name = kmer_profiler
version = 0.1
author = Yoshihiko Suzuki
author_email = ys.neoteny@gmail.com
url = https://github.com/yoshihikosuzuki/kmer-profile
description = K-mer profiler of reads
long_description = file: README.md

[options]
zip_safe = False
python_requires = >= 3.7
package_dir =
  kmer_profiler = src
packages =
  kmer_profiler
  kmer_profiler._core
  kmer_profiler._plot
install_requires =
  plotly >= 4.9.0
  dash >= 1.14.0
  typing_extensions
  bits_yoshi
  plotly_light

[options.entry_points]
console_scripts =
  kmer_profiler = kmer_profiler._dash:main
  ClassProPy = kmer_profiler._main:main
